--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -1,20 +1,20 @@
 <div class="flex justify-content-center">
   <div class="col-10">
     <p-card>
-      <h2>聯絡人</h2>
+      <h2>客戶聯絡人</h2>
       <div class="flex justify-content-end">
         <span class="p-buttonset">
-          <p-button (click)="showDialog('add')" label="新增聯絡人" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+          <p-button (click)="showDialog('add')" label="新增客戶聯絡人" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
       </div>
       <p-table [value]="contact">
         <ng-template pTemplate="header">
           <tr>
             <th>姓名</th>
-            <th>帳戶名稱</th>
+            <th>客戶名稱</th>
             <th>電話</th>
             <th>電子郵件</th>
-            <th>聯絡人擁有者別名</th>
+            <th>業務負責人</th>
             <th>編輯</th>
           </tr>
         </ng-template>
@@ -44,7 +44,7 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>帳戶名稱</label>
+          <label>客戶名稱</label>
           <input pInputText formControlName="account_name">
         </div>
       </div>
@@ -56,7 +56,7 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>聯絡人擁有者</label>
+          <label>業務負責人</label>
           <input pInputText formControlName="contact_owner">
         </div>
       </div>
