fix: 機會更名->商機

--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -11,7 +11,7 @@
         <ng-template pTemplate="header">
           <tr>
             <th>報價名稱</th>
-            <th>機會名稱</th>
+            <th>商機名稱</th>
             <th>正在同步化</th>
             <th>到期日期</th>
             <th>小計</th>
@@ -46,7 +46,7 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>機會名稱</label>
+          <label>商機名稱</label>
           <input pInputText formControlName="opportunity_name">
         </div>
       </div>
