--- a/src/app/views/components/toolbar/toolbar.component.scss
+++ b/src/app/views/components/toolbar/toolbar.component.scss
@@ -8,24 +8,7 @@ a {
     font-size: x-large;
   }
 }
-
-:host ::ng-deep {
-
-  //表單第一層樣式
-  .p-panelmenu .p-panelmenu-header>a,
-  //下拉選單樣式
-  .p-panelmenu .p-panelmenu-panel:last-child .p-panelmenu-content {
-    border: none;
-    background-color: white;
-    border-radius: 6px;
-  }
-
-  //表單第一層樣式
-  .p-panelmenu .p-panelmenu-panel:first-child .p-panelmenu-header>a,
-  .p-panelmenu .p-panelmenu-panel:last-child .p-panelmenu-header:not(.p-highlight)>a,
-  //滑鼠移至下拉選單選項顯示陰影
-  .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link {
-    border-radius: 6px;
-    color: var(--primary-color)!important;
-  }
+:host ::ng-deep .p-menubar{
+  background: #2E5C6E;
 }
+
