fix: 帳戶頁面行業dropdown

--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -66,7 +66,7 @@
       <div class="col-6">
         <div class="field">
           <label>行業</label>
-          <p-dropdown placeholder="請選擇" [disabled]="true" [options]="industry" optionLabel="name" (onChange)="typeValue($event)"
+          <p-dropdown placeholder="請選擇" [disabled]="true" [options]="industry" optionLabel="name" (onChange)="industryValue($event)"
             formControlName="industry" appendTo="body"></p-dropdown>
         </div>
       </div>
