feat: 創建人與更新人新增無法變動

--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -11,13 +11,9 @@
         <ng-template pTemplate="header">
           <tr>
             <th>帳戶名稱</th>
-            <th>業務負責人</th>
             <th>電話</th>
-            <th>行業</th>
             <th>類型</th>
-            <th>父系帳戶</th>
-            <th>建立者</th>
-            <th>修改者</th>
+            <th>業務負責人</th>
             <th>檢視</th>
             <th>編輯</th>
           </tr>
@@ -25,13 +21,9 @@
         <ng-template pTemplate="body" let-account>
           <tr>
             <td>{{ account.account_name }}</td>
-            <td>{{ account.account_owner }}</td>
             <td>{{ account.phone }}</td>
-            <td>{{ account.industry }}</td>
             <td>{{ account.type }}</td>
-            <td>{{ account.parent_account }}</td>
-            <td>{{ account.created_by }}</td>
-            <td>{{ account.updated_by }}</td>
+            <td>{{ account.account_owner }}</td>
             <td><p-button icon="pi pi-eye" routerLink="/main/account/view"
               styleClass="p-button-rounded p-button-secondary p-button-text"></p-button></td>
             <td><p-button (click)="showDialog('edit',account)" icon="pi pi-pencil"
@@ -86,15 +78,17 @@
       <div class="col-6">
         <div class="field">
           <label>建立者</label>
-          <br>
-          {{account[0].created_by}}{{account[0].created_at}}
+          <input placeholder="此處無法自行填寫" pInputText formControlName="created_by" readonly>
+          <div class="mt-2"></div>
+          <input placeholder="此處無法自行填寫" pInputText formControlName="created_at" readonly>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>修改者</label>
-          <br>
-          {{account[0].updated_by}}{{account[0].updated_at}}
+          <input placeholder="此處無法自行填寫" pInputText formControlName="updated_by" readonly>
+          <div class="mt-2"></div>
+          <input placeholder="此處無法自行填寫" pInputText formControlName="updated_at" readonly>
         </div>
       </div>
     </div>
