style: toolbar顏色、寬度調整

--- a/src/app/views/components/toolbar/toolbar.component.scss
+++ b/src/app/views/components/toolbar/toolbar.component.scss
@@ -13,12 +13,27 @@ a {
   .p-menubar {
     background: #2E5C6E;
     border: none;
-  }
+    border-radius: 0;
 
-  .p-menubar .p-menubar-root-list>.p-menuitem>.p-menuitem-link .p-menuitem-text {
-    color: #FFFFFB;
-    font-size: larger;
-    font-weight: bold;
+    .p-menubar-root-list .p-menuitem .p-menuitem-link {
+      .p-menuitem-text {
+        color: #FFFFFB;
+        font-size: larger;
+        font-weight: bold;
+
+        &:hover {
+          color: #FFFFFB;
+        }
+      }
+
+      &:hover {
+        background: #356d86;
+        color: #FFFFFB;
+      }
+
+      &:not(.p-disabled):hover .p-menuitem-text {
+        color: #FFFFFB;
+      }
+    }
   }
 }
-
