style: 帳戶業務負責人&創建者&更新者 disable

--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -45,8 +45,8 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>業務負責人</label>
-          <input pInputText formControlName="account_owner">
+          <label>業務負責人 </label>
+          <input placeholder="此處無法自行填寫" pInputText formControlName="account_owner">
         </div>
       </div>
       <div class="col-6">
