--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -25,11 +25,11 @@
         <ng-template pTemplate="body" let-lead>
           <tr>
             <td><span pTooltip={{lead.stage}} tooltipPosition="top" [ngClass]="{
-                'text-400': lead.stage === '不明確',
-                'text-blue-300': lead.stage === '新線索',
-                'text-yellow-300': lead.stage === '評估中',
-                'text-orange-300': lead.stage === '發展中',
-                'text-green-300': lead.stage === '已轉換'
+                'text-400': lead.stage === stage[0].name,
+                'text-blue-300': lead.stage === stage[1].name,
+                'text-yellow-300': lead.stage === stage[2].name,
+                'text-orange-300': lead.stage === stage[3].name,
+                'text-green-300': lead.stage === stage[4].name
             }" class="pi pi-circle-fill ml-2"></span>
             </td>
             <td>{{ lead.name }}</td>
@@ -50,6 +50,18 @@
           </tr>
         </ng-template>
       </p-table>
+      <div class="flex align-items-center mt-3 ml-4">
+        <span class="text-400 pi pi-circle-fill mr-1"></span>
+        <span>{{stage[0].name}}</span>
+        <span class="text-blue-300 pi pi-circle-fill mr-1 ml-2"></span>
+        <span>{{stage[1].name}}</span>
+        <span class="text-yellow-300 pi pi-circle-fill mr-1 ml-2"></span>
+        <span>{{stage[2].name}}</span>
+        <span class="text-orange-300 pi pi-circle-fill mr-1 ml-2"></span>
+        <span>{{stage[3].name}}</span>
+        <span class="text-green-300 pi pi-circle-fill mr-1 ml-2"></span>
+        <span>{{stage[4].name}}</span>
+      </div>
     </p-card>
   </div>
 </div>
