--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -1,13 +1,15 @@
-<div class="p-toolbar-group-left ">
-  <p-menubar [model]="items">
-    <ng-template pTemplate="start">
-
-    </ng-template>
-    <ng-template pTemplate="end">
-
-    </ng-template>
+<p-menubar [model]="items">
+  <ng-template pTemplate="start"></ng-template>
+  <ng-template pTemplate="end">
+    <span class="p-input-icon-left mr-4">
+        <i class="text-white pi pi-search ml-2"></i>
+        <input type="text"  pInputText/>
+    </span>
+    <p-button pTooltip="行事曆" tooltipPosition="bottom" icon="pi pi-calendar" routerLink="/main/event"
+              styleClass="text-white p-button-rounded p-button-secondary p-button-text p-button-lg mr-2"></p-button>
+    <p-button icon="pi pi-user"
+              styleClass="text-white p-button-rounded p-button-secondary p-button-text p-button-lg mr-3"></p-button>
+  </ng-template>
 </p-menubar>
-</div>
-<div class="p-toolbar-group-right">
 
-</div>
+
